2010-08-18  Vadim Kurland  <vadim@vk.crocodile.org>

	* Helper.cpp (list): fixed #1691 , this is a better fix for the
	problem reported in the earlier bug (see #1690).
	Function Helper::findInterfaceByNetzone() throws FWException, this
	changed in v4.1.0 with a fix for #1653.

2010-08-17  Vadim Kurland  <vadim@vk.crocodile.org>

	* procurveInterfaces.cpp (procurveInterfaces::parseVlan): fixed #1683
	class procurveInterfaces interprets interface "DEFAULT_VLAN" as
	vlan interface with vlan id 1.

	* newFirewallDialog.cpp (newFirewallDialog::finishClicked):
	fixed #1683 When user creates new firewall using snmp scan,
	fwbuilder will now guess and assign the type to interfaces that
	look like vlans for the given platform and host OS.

	* safety_net_acl: fixed #1687 "temporary access list commands
	syntax is incorrect". Temporary ACL generated for the Procurve
	platform was incorrect.

	* PolicyCompiler_cisco.cpp (PolicyCompiler_cisco::setAllNetworkZonesToAny): 
	fixed #1690 "IOS ACL and Procurve ACL compilers fail because
	interfaces are not assumed to have network zone "any" anymore".
	Compilers for Cisco IOS ACL and Procurve ACL always assumed all
	interfaces have network zone "any". Recent changes made in 4.1.0
	changed that and compilers stopped working for some rule configurations.

	* (PolicyCompiler_cisco::createACLObject): fixed #1688 "Procurve
	ACL remarks should be in quotes if they include space"

2010-08-14  Vadim Kurland  <vadim@vk.crocodile.org>

	* FirewallInstallerProcurve.cpp (FirewallInstallerProcurve::packInstallJobsList): 
	Policy installer for HP Procurve. Currently only works in line-by-line
	mode (no support for scp). Tested with Procurve firmware K14.31 on
	ProCurve J9470A Switch 3500-24. Caveat: manager access should not be
	configured with user name (that is, no "password manager user-name foo")

	* set version to 4.1.1
	
2010-08-10  Vadim Kurland  <vadim@vk.crocodile.org>

	* v4.1.0 released
